--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.1",
-    "core-js": "^3.4.4",
-    "element-ui": "^2.4.5",
+    "axios": "^0.19.2",
+    "core-js": "^3.6.4",
+    "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
     "svg-sprite-loader": "^4.2.1",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vue-baidu-map": "^0.21.22",
-    "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vue-router": "^3.1.5",
+    "vuex": "^3.1.3",
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
@@ -44,8 +44,7 @@
       "plugin:vue/essential",
       "@vue/prettier"
     ],
-    "rules": {
-    },
+    "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
     }
